# haskell-hockey

./: .gitignore  LICENSE  Procfile  README.md  app.json  cabal.config  env-template  env.sample  haskell-hockey.cabal  hockey-background.cabal  stack.yaml  test.sqlite  update.sql  worker.sh
.github/workflows/: main.yml
database/: teams.sql
src/: Main.hs  Web.hs  Worker.hs
src/Hockey/: Database.hs  Environment.hs  Formatting.hs  Network.hs  Parsing.hs  Playoffs.hs  Processing.hs  Requests.hs  Teams.hs  Types.hs  Video.hs
src/Hockey/Database/: Formatting.hs  Internal.hs  Types.hs
src/Hockey/Types/: Events.hs  Standings.hs
web/: Handlers.hs  Web.hs
web/Handlers/: Games.hs  LegacyPlayoffs.hs  Playoffs.hs
web/Models/: Json.hs  LegacyJson.hs  Path.hs
worker/: Worker.hs
