name:                haskell-hockey
version:             2.0.0
synopsis:            NHL parsing
-- description:
homepage:            http://peteappdesigns.com
license:             MIT
license-file:        LICENSE
author:              Pierre-Marc Airoldi
maintainer:          pierremarcairoldi@gmail.com
copyright:           2017 Pierre-Marc Airoldi
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hockey.Database
                     , Hockey.Environment
                     , Hockey.Formatting
                     , Hockey.Network
                     , Hockey.Parsing
                     , Hockey.Playoffs
                     , Hockey.Processing
                     , Hockey.Requests
                     , Hockey.Teams
                     , Hockey.Types
                     , Hockey.Video
  other-modules:       Hockey.Database.Internal
                     , Hockey.Database.Types
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , formatting
                     , bytestring
                     , split
                     , scientific
                     , aeson
                     , monad-control
                     , monad-logger
                     , transformers
                     , persistent >=2.2 && <2.3
                     , persistent-template
                     , persistent-postgresql
                     , persistent-sqlite
                     , HTTP
                     , load-env
  default-language:    Haskell2010

executable hockey-web
  hs-source-dirs:      web
  other-modules:       Models.Json
                     , Handlers.Playoffs
  main-is:             Web.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesod-form <1.4.8
                     , yesod
                     , haskell-hockey
  default-language:    Haskell2010

executable hockey-worker
  hs-source-dirs:      worker
  main-is:             Worker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , haskell-hockey
  default-language:    Haskell2010

test-suite haskell-hockey-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-hockey
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/petester42/haskell-hockey
